--- a/Personal Projects/Paracorded/index.html
+++ b/Personal Projects/Paracorded/index.html
@@ -2,24 +2,33 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="" content="width=device-width, height=device-height, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Paracorded</title>
 
     <link href="styles.css" rel="stylesheet" type="text/css" media="all">
+    <style>
+
+    </style>
   </head>
 
   <body class = "index_Back">
-        <div class = "top">
-                <div class ="linkbar">
-                        <h1>hello</h1>
-                </div>
-        </div>
-        <h1>Paracorded</h1>
-        <div class = "center">
-        <p style = "font-size: larger;"></p>
-        <p style = "font-size: medium;">
-        </p>
-        </div>
+    <h1><img src = "Images/ParacordedLogo.png" class = "logo"></h1>
+
+    <div class = "top">
+      <div class = "links">
+        <a href = "about.html">About Us</a>
+        <a href = "index.html" class = "active">Home</a>
+        <a href = "products.html">Products</a>
+      </div>
+    </div>
+
+    <div class = "center" style="padding-right: 5px; padding-left: 5px;">
+      <p style = "font-size: x-large;">Welcome to Paracorded.shop, your one stop shop for all things paracord</p>
+      <p style = "font-size: larger;">We sell a number of parachute cord based products.
+
+      <br>
+      </p>
+    </div>
 
 
 
