--- a/Personal Projects/Paracorded/404.html
+++ b/Personal Projects/Paracorded/404.html
@@ -14,13 +14,13 @@
       <div class = "links">
         <a href = "about.html">About Us</a>
         <a href = "index.html">Home</a>
-        <a href = "products.html">Products</a>
+        <a href = "products">Products</a>
       </div>
     </div>
     <h1 style="position: relative; top: 30px;">ERROR 404: PAGE NOT FOUND</h1>
     <div class = "center">
       <p style = "font-size: larger;">
-        <br>Yeah, we're not entirely sure what you were looking for here but there ain't anything here 
+        <br>Yeah, we're not entirely sure what you were looking for here but there ain't anything here
         <br>Sorry about that :)</p>
       <p>If you really do think there should be a page at this address, please report an issue <a href = "https://github.com/Astralis0/Paracorded/issues/new">here</a></p>
 
