--- a/Personal Projects/Paracorded/about.html
+++ b/Personal Projects/Paracorded/about.html
@@ -14,7 +14,7 @@
       <div class = "links">
         <a href = "about.html" class = "active">About Us</a>
         <a href = "index.html">Home</a>
-        <a href = "products.html">Products</a>
+        <a href = "products=">Products</a>
       </div>
     </div>
     <h1 style="position: relative; top: 30px;">About Us</h1>
@@ -35,6 +35,9 @@
     </div>
 
 
-
+    <br>
+    <br>
+    <br>
+    <br>
   </body>
 </html>
