--- a/Personal Projects/Paracorded/index.html
+++ b/Personal Projects/Paracorded/index.html
@@ -12,13 +12,13 @@
   </head>
 
   <body class = "index_Back">
-    <h1 style="position: relative; top: 30px;"> <img src = "Images/ParacordedLogo.png" class = "logo"></h1>
+    <h1 style="position: relative; top: 30px;"> <img src = "Assets/ParacordedLogo.png" class = "logo"></h1>
 
     <div class = "top">
       <div class = "links">
         <a href = "about.html">About Us</a>
         <a href = "index.html" class = "active">Home</a>
-        <a href = "products.html">Products</a>
+        <a href = "products">Products</a>
       </div>
     </div>
 
