--- a/Personal Projects/Paracorded/about.html
+++ b/Personal Projects/Paracorded/about.html
@@ -14,7 +14,7 @@
       <div class = "links">
         <a href = "about.html" class = "active">About Us</a>
         <a href = "index.html">Home</a>
-        <a href = "products=">Products</a>
+        <a href = "products">Products</a>
       </div>
     </div>
     <h1 style="position: relative; top: 30px;">About Us</h1>
@@ -35,8 +35,13 @@
     </div>
 
 
-    <br>
-    <br>
+
+    <div class = "bottom">
+    <br>Contact Us?
+    <a href="mailto:paracordedshop@gmail.com">Email</a>
+      <br>
+      <br>
+    </div>
     <br>
     <br>
   </body>
