--- a/Personal Projects/Paracorded/products/index.html
+++ b/Personal Projects/Paracorded/products/index.html
@@ -25,55 +25,16 @@
         <a href = "." class = "active">Products</a>
       </div>
     </div>
-    <div class = "products center">
-      <!--Bracelets-->
-      <div class = "buttonT1">
-        <h2>Bracelets</h2>
-        <a class = "buttonT2">
-          <h3 style="height: 46.6666px;">Cobra Bracelet</h3>
-          <img src="../Assets/SQUARE.png">
-        </a>
-        <a class = "buttonT2">
-          <h3>Sanctified Covenant</h3>
-          <img src="../Assets/SQUARE.png">
-        </a>
-        <a class = "buttonT2">
-          <h3>Lotte's Endless Falls</h3>
-          <img src="../Assets/SQUARE.png">
-        </a>
-        <a class = "buttonT2">
-          <h3 style="height: 46.6666px;">Fan-Tastic</h3>
-          <img src="../Assets/SQUARE.png">
-        </a>
-
-      </div>
-      <!--Zip Pulls-->
-      <div class = "buttonT1">
-        <h2>Zipper Pulls</h2>
-        <a class = "buttonT2">
-          <h3 style="height: 46.6666px;">Cobra Style</h3>
-          <img src="../Assets/SQUARE.png">
-        </a>
-        <a class = "buttonT2">
-          <h3>Monkey's Fist Style</h3>
-          <img src="../Assets/SQUARE.png">
-        </a>
-        <a class = "buttonT2">
-          <h3 style="height: 46.6666px;">Diamond Style</h3>
-          <img src="../Assets/SQUARE.png">
-        </a>
-
-      </div>
-      <!--Additions-->
-      <div class = "buttonT1">
-        <h2>Adds</h2>
+    <h2>Online shop is currently unavailable, please email us with your order.</h2>
+    <h3>Please include your choice of colour/colours in your email as well as your wrist circumference if you are ordering a bracelet.</h3>
 
 
-
-      </div>
+    <div class = "bottom">
+    <br>Contact Us?
+    <a href="mailto:paracordedshop@gmail.com">Email</a>
+      <br>
+      <br>
     </div>
-
-
-
-  </body>
+      <br>
+    </body>
 </html>
