--- a/Personal Projects/Paracorded/404.html
+++ b/Personal Projects/Paracorded/404.html
@@ -6,6 +6,12 @@
     <title>Paracorded</title>
 
     <link href="styles.css" rel="stylesheet" type="text/css" media="all">
+    <style>
+      .center a {
+        color: #00a8f3;
+        font-weight: 900;
+      }
+    </style>
   </head>
 
   <body class = "index_Back">
@@ -22,11 +28,18 @@
       <p style = "font-size: larger;">
         <br>Yeah, we're not entirely sure what you were looking for here but there ain't anything here
         <br>Sorry about that :)</p>
-      <p>If you really do think there should be a page at this address, please report an issue <a href = "https://github.com/Astralis0/Paracorded/issues/new">here</a></p>
+      <p style = "font-size: larger;">
+        If you really do think there should be a page at this address, please report an issue <a href = "https://github.com/Astralis0/Paracorded/issues/new">here</a> or send us an <a href = "mailto:paracordedshop@gmail.com">Email</a></p>
 
     </div>
 
 
-
+    <div class = "bottom">
+      <br>Contact Us?
+      <a href="mailto:paracordedshop@gmail.com">Email</a>
+        <br>
+        <br>
+      </div>
+        <br>
   </body>
 </html>
