--- a/Personal Projects/Paracorded/index.html
+++ b/Personal Projects/Paracorded/index.html
@@ -31,6 +31,12 @@
     </div>
 
 
-
-  </body>
+    <div class = "bottom">
+      <br>Contact Us?
+      <a href="mailto:paracordedshop@gmail.com">Email</a>
+      <br>
+      <br>
+    </div>
+      <br>
+    </body>
 </html>
