--- a/WTAOW/socials.html
+++ b/WTAOW/socials.html
@@ -14,7 +14,7 @@
         <body class = "index_Back">
 
                 <div class = "top">
-                        <a href = "socials.html" class = "link">Social</a>
+                        <a href = "socials.html" class = "link">About Us</a>
                         <a class = "seperator"></a>
                         <a href = "index.html" class = "link">Home</a>
                         <a class = "seperator"></a>
