--- a/WTAOW/index.html
+++ b/WTAOW/index.html
@@ -1,18 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html style="overflow-y: scroll;" id = "base">
         <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>WTAOW</title>
                 <link rel="icon" type="image/x-icon" href="assets/Icon.png">
                 <link href="styles.css" rel="stylesheet" type="text/css" media="all">
+                <link rel="javascript" href = "scripts.js" type="text/javascript">
+                <script src = "scripts.js"></script>
                 <style>
-
+                        .posterSwap{
+                                background-color: #00FF00;
+                                z-index: 4;
+                                position: absolute;
+                                top: 10px;
+                                left: 10px;
+                        }
+                        .posterSwap .tooltiptext{
+                                color: aliceblue;
+                                top:100%;
+                                left:250%;
+                                bottom: auto;
+                        }
                 </style>
+
+                <script>
+                </script>
         </head>
 
-        <body>
+        <body onload = "checkEnabled('posterWTAOW', 'poster')">
                 <div class= "backing"></div>
+                <div class= "cover"></div>
+                <div class= "poster" id = "posterWTAOW" onclick = "begone('posterWTAOW')" onkeypress = "begone('posterWTAOW')">
+                                <img src = "assets/poster.png">
+                </div>
+                <button class= "posterSwap tooltip" id= "posterSwap" onclick = "swapEnabled('poster')">
+                        P
+                        <span class = "tooltiptext">Click to enable or disable the poster appearing</span>
+                </button>
                 <div class = "top">
                         <div class = "links">
                                 <a href = "socials.html"><p>Socials</p></a>
@@ -20,9 +45,12 @@
                                 <a href = "characters/"><p>Characters</p></a>
                         </div>
                 </div>
-
                 <div class = "center">
-                        <p style = "color: aliceblue;"><span class = "bigCap">W</span>elcome to the official website for <span class = "tooltip">WTAOW<span class = "tooltiptext">Was There Any Other Way</span></p>
+                        <p style = "color: aliceblue;">
+                                Welcome to the official website for
+                                <span class = "tooltip"> WTAOW,<span class = "tooltiptext">Was There Any Other Way</span></span>
+                                here you can find all the characters, videos, socials and much more!
+                        </p>
                 </div>
 
 
