--- a/WTAOW/socials.html
+++ b/WTAOW/socials.html
@@ -6,6 +6,8 @@
                 <title>WTAOW</title>
                 <link rel="icon" type="image/x-icon" href="assets/Icon.png">
                 <link href="styles.css" rel="stylesheet" type="text/css" media="all">
+                <link rel="javascript" href = "scripts.js" type="text/javascript">
+                <script src = "scripts.js"></script>
                 <style>
                         .discord{
                                 margin-top:30px;
@@ -18,7 +20,13 @@
                         .discord h1{
                                 bottom:361px
                         }
-                        .discord .body .image {background-image:image-set("assets/discord.png")}
+                        .discord .body .image {
+                                background-image:image-set("assets/discord.png");
+                                height: 0;
+                                width: 20%;
+                                aspect-ratio: 1/1;
+                                height: auto;
+                        }
                         .youtube .body {background-color: rgba(255, 0, 0, 0.7)}
                         .youtube .body .image {background-image:image-set("assets/youtube.png")}
                         .tiktok .body {background-color: rgba(0, 0, 0, 0.8)}
@@ -26,65 +34,83 @@
                         .tiktok h1{background-color: #fe285686;}
                         .tumblr .body {background-color: rgb(58, 48, 82)}
                         .tumblr .body .image {background-image:image-set("assets/tumblr.png");}
-                        .tumblr h1{background-color: #efb76d;}
-                    
+
+
                         @media only screen and (max-width: 700px){
-                                .discord{height:240px}
-                                .discord .body{height:260px}
-                                .discord h1{bottom:322px}
+                                .discord{height:250px}
+                                .discord .body{height:270px}
+                                .discord h1{bottom:332px}
+                                .discord .body .text{height: 25%;}
                                 .youtube{height:120px}
                                 .youtube .body{height:140px}
                                 .youtube h1{bottom:202px}
                                 .tiktok{height:160px}
                                 .tiktok .body{height:160px}
                                 .tiktok h1{bottom:222px;}
+                                .tumblr{height:160px}
+                                .tumblr .body{height:160px}
+                                .tumblr h1{bottom:222px;}
                         }
+
                 </style>
+                <script>
+                </script>
         </head>
 
-        <body>
-
+        <body onload = "">
+                <div class= "backing"></div>
+                <div class= "cover"></div>
                 <div class = "socialsList" >
                         <div class = "social discord">
                                 <div class = "body">
-                                        <a class = "image" href ="https://discord.gg/GfDZJJ25qK"></a>
-                                        <a class = "text"  href ="https://discord.gg/GfDZJJ25qK">
+                                        <a class = "image" href ="https://discord.gg/GfDZJJ25qK" onmouseover ="spin('image', 0)" tabindex = "-1"></a>
+                                        <a class = "text"  href ="https://discord.gg/GfDZJJ25qK" style="padding-bottom: 0; margin-bottom: 0;" onfocus ="spin('image', 0)">
                                                 Come join our discord! We foster a wonderful community with our excellent staff, here you can;
-                                            <br>▣ Audition for roles in the project,
-                                            <br>▣ Work with others to uncover secrets,
-                                            <br>▣ Get alerted for all new content drops,
-                                            <br>▣ Interact with a wholesome community
-                                            <p>ALL are welcome and discrimination will NOT be tolerated</p>
+                                        <span class = "desktop">
+                                                <br>▣ Audition for roles in the project,
+                                                <br>▣ Work with others to uncover secrets,
+                                                <br>▣ Get alerted for all new content drops,
+                                                <br>▣ Interact with a wholesome community
+                                                <p>ALL are welcome and discrimination will NOT be tolerated</p>
+                                        </span>
                                         </a>
+                                        <span class = "mobile">
+                                        <a class = "text" style="width: 90%; padding-top: 0; margin-top: 0;">
+                                                <br>▣ Audition for roles in the project,
+                                                <br>▣ Work with others to uncover secrets,
+                                                <br>▣ Get alerted for all new content drops,
+                                                <br>▣ Interact with a wholesome community
+                                                <p>ALL are welcome and discrimination will NOT be tolerated</p>
+                                        </a>
+                                        </span>
                                 </div>
                                 <h1>Discord</h1>
                         </div>
                         <div class = "social youtube">
                                 <div class = "body">
-                                        <a class = "text" href ="https://www.youtube.com/@fireboaserpent">
+                                        <a class = "text" href ="https://www.youtube.com/@fireboaserpent" onfocus ="spin('image', 1)">
                                                 Check out our Youtube channel!
                                             <br>There you can find tons of lore and a lot of fun :)
                                         </a>
-                                        <a class = "image" href ="https://www.youtube.com/@fireboaserpent"></a>
+                                        <a class = "image" href ="https://www.youtube.com/@fireboaserpent" onmouseover ="spin('image', 1)" tabindex = "-1"></a>
                                 </div>
                                 <h1>Youtube</h1>
                         </div>
                         <div class = "social tiktok">
                                 <div class = "body">
-                                        <a class = "text" href ="https://www.tiktok.com/@fireboaserpent">
-                                                Check out our TikTok page!
-                                            <br>There you can find tons of lore and a lot of fun :)
+                                        <a class = "text" href ="https://www.tiktok.com/@fireboaserpent" onfocus ="spin('image', 2)">
+                                                Tick your way over to our TikTok page where you can find all of the currently released videos over there
                                         </a>
-                                        <a class = "image" href ="https://www.tiktok.com/@fireboaserpent"></a>
+                                        <a class = "image" href ="https://www.tiktok.com/@fireboaserpent" onmouseover ="spin('image', 2)" tabindex = "-1"></a>
                                 </div>
                                 <h1>TikTok</h1>
                         </div>
                         <div class = "social tumblr">
                                 <div class = "body">
-                                        <a class = "text" href ="https://www.tumblr.com/wasthereanyotherway">
-                                                lorem ipsum dolor sit amet, consecetur adipiscing elit
+                                        <a class = "text" href ="https://www.tumblr.com/wasthereanyotherway" onfocus ="spin('image', 3)">
+                                                Come tumble on down to our tumblr, there you can you can submit fanart and ask questions
                                         </a>
-                                        <a class = "image" href ="https://www.tumblr.com/wasthereanyotherway"></a>
+                                        <a class = "image" href ="https://www.tumblr.com/wasthereanyotherway" onmouseover ="spin('image', 3)" tabindex = "-1"></a>
                                 </div>
                                 <h1>Tumblr</h1>
                         </div>
