please don't die

--- a/WTAOW/characters/index.html
+++ b/WTAOW/characters/index.html
@@ -4,7 +4,7 @@
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>Characters</title>
-                <link rel="icon" type="image/x-icon" href="../assets/Icon.png">
+                <link rel="icon" type="image/x-icon" href="../assets/icon.png">
                 <link href="../styles.css" rel="stylesheet" type="text/css" media="all">
                 <link href="characterStyles.css" rel="stylesheet" type="text/css" media="all">
                 <script src = "../scripts.js"></script>
@@ -15,7 +15,6 @@
                         .tile.angel_3-2 .image{background-image: image-set("assets/angelbot_model_3-2.png");}
                         .tile.angel_3-3 .image{background-image: image-set("assets/angelbot_model_3-3.png");}
                         .tile.angel_x .image{background-image: image-set("assets/angelbot_model_x.png");}
-                        .tile.blake .image{background-image: image-set("assets/blake.png");}
                         .tile.blake .image{background-image: image-set("assets/blake.png");}
                         .tile.griffon .image{background-image: image-set("assets/griffon.png");}
                         .tile.kit .image{background-image: image-set("assets/kit.png");}
@@ -45,84 +44,85 @@
                 <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "../socials.html"><p>Socials</p></a>
-                                <a href = ".."><p>Home</p></a>
-                                <a href = "." class = "active"><p>Characters</p></a>
+                                <a href = "../socials.html">Socials</a>
+                                <a href = "..">Home</a>
+                                <a href = "." class = "active">Characters</a>
                         </div>
                 </div>
+
 
                 <div class = "characterSelector">
                         <div class = 'tile alexis' onclick = "link('alexis.html')">
                                 <a class = 'image' id = "alexis" href="alexis.html" tabindex="0"></a>
-                                <a>Alexis</a>
+                                <a>Alexis<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile ali' onclick = "link('ali.html')">
                                 <a class = 'image' href="ali.html" tabindex="0"></a>
-                                <a>Ali</a>
+                                <a>Ali<span class = "mobile"><br></span></a>
                         </div>
-                        <div class = 'tile angel_1-0' onclick = "link('angelbot-model_1-0.html')">
-                                <a class = 'image' href="angelbot-model_1-0.html" tabindex="0"></a>
-                                <a>Angelbot Model 1.0</a>
+                        <div class = 'tile angel_1-0' onclick = "link('angelbot_model_1-0.html')">
+                                <a class = 'image' href="angelbot_model_1-0.html" tabindex="0"></a>
+                                <a>Angelbot Model 1.0 #443</a>
                         </div>
                         <div class = 'tile angel_3-2' onclick = "link('angelbot_model_3-2.html')">
-                                <a class = 'image' href="angelbot-model_3-2.html" tabindex="0"></a>
-                                <a>Angelbot Model 3.2</a>
+                                <a class = 'image' href="angelbot_model_3-2.html" tabindex="0"></a>
+                                <a>Angelbot Model 3.2 #02</a>
                         </div>
                         <div class = 'tile angel_3-3' onclick = "link('angelbot_model_3-3.html')">
-                                <a class = 'image' href="angelbot-model_3-3.html" tabindex="0"></a>
-                                <a>Angelbot Model 3.3</a>
+                                <a class = 'image' href="angelbot_model_3-3.html" tabindex="0"></a>
+                                <a>Angelbot Model 3.3 #001</a>
                         </div>
                         <div class = 'tile angel_x' onclick = "link('angelbot_model_x.html')">
-                                <a class = 'image' href="angelbot-model_x.html" tabindex="0"></a>
-                                <a>Angelbot Model X</a>
+                                <a class = 'image' href="angelbot_model_x.html" tabindex="0"></a>
+                                <a>Angelbot Model X<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile blake' onclick = "link('blake.html')">
                                 <a class = 'image' href="blake.html" tabindex="0"></a>
-                                <a>Blake</a>
+                                <a>Blake<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile griffon' onclick = "link('griffon.html')">
                                 <a class = 'image' href="griffon.html" tabindex="0"></a>
-                                <a>Griffon</a>
+                                <a>Griffon<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile kit' onclick = "link('kit.html')">
                                 <a class = 'image' href="kit.html" tabindex="0"></a>
-                                <a>Kit</a>
+                                <a>Kit<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile lettia' onclick = "link('lettia.html')">
                                 <a class = 'image' href="lettia.html" tabindex="0"></a>
-                                <a>Lettia</a>
+                                <a>Lettia<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile maria' onclick = "link('maria.html')">
                                 <a class = 'image' href="maria.html" tabindex="0"></a>
-                                <a>Maria</a>
+                                <a>Maria<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile marissa' onclick = "link('marissa.html')">
                                 <a class = 'image' href="marissa.html" tabindex="0"></a>
-                                <a>Marrissa</a>
+                                <a>Marrissa<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile medusa' onclick = "link('medusa.html')">
                                 <a class = 'image' href="medusa.html" tabindex="0"></a>
-                                <a>Medusa</a>
+                                <a>Medusa<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile milo' onclick = "link('milo.html')">
                                 <a class = 'image' href="milo.html" tabindex="0"></a>
-                                <a>Milo</a>
+                                <a>Milo<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile owen' onclick = "link('owen.html')">
                                 <a class = 'image' href="owen.html" tabindex="0"></a>
-                                <a>Owen</a>
+                                <a>Owen<span class = "mobile"><br></span></a>
                         </div>
-                        <div class = 'tile sophia' onclick = "link('sophia.html')" onfocus="focusLink(sophia.html)">
+                        <div class = 'tile sophia' onclick = "link('sophia.html')">
                                 <a class = 'image' href="sophia.html" tabindex="0"></a>
-                                <a>Sophia</a>
+                                <a>Sophia<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile thea' onclick = "link('thea.html')">
                                 <a class = 'image' href="thea.html" tabindex="0"></a>
-                                <a>Thea</a>
+                                <a>Thea<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile xero' onclick = "link('xero.html')">
                                 <a class = 'image' href="xero.html" tabindex="0"></a>
-                                <a>Xero</a>
+                                <a>Xero<span class = "mobile"><br></span></a>
                         </div>
 <!--
 Did I entirely remake the image for Kit in the picrew because it was ever so slightly off?
