--- a/WTAOW/characters/character-template.html
+++ b/WTAOW/characters/character-template.html
@@ -4,12 +4,38 @@
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>Template</title>
-                <link rel="icon" type="image/x-icon" href="../assets/Icon.png">
+                <link rel="icon" type="image/x-icon" href="../assets/icon.png">
                 <link href="../styles.css" rel="stylesheet" type="text/css" media="all">
                 <link href="characterStyles.css" rel="stylesheet" type="text/css" media="all">
+                <script src = "../scripts.js"></script>
+                <script src = "scripts.js"></script>
                 <style>
                         .image{
-                                background-image: image-set("assets/kit.png");
+                                background-image: image-set("IMAGE");
+                        }
+                        .textColumn table{
+                                width: auto;
+                                font-size: larger;
+
+                        }
+                        .data{
+                                padding-left: 20px;
+                                width:auto;
+                                font-weight: 500;
+                        }
+                        .category{
+                                width:auto;
+                                margin-right: 20px;
+                                font-weight: 800;
+                        }
+                        @media only screen and (max-width: 700px) {
+                                .textColumn table{
+                                        font-size: 20px;
+                                }
+                                .data{
+                                        padding-left: 20px;
+                                        font-weight: 500;
+                                }
                         }
                 </style>
         </head>
@@ -19,18 +45,62 @@
                 <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html"><p>Socials</p></a>
-                                <a href = ".."><p>Home</p></a>
-                                <a href = "." class = "active"><p>Characters</p></a>
+                                <a href = "socials.html">Socials</a>
+                                <a href = "..">Home</a>
+                                <a href = "." class = "active">Characters</a>
                         </div>
                 </div>
 
                 <div class = "characterPage">
-                        <div class = "imageColumn">
+                        <div class = "imageColumn" id = "imageCol">
                                 <a class = "image"></a>
                         </div>
-                        <div class = "textColumn">
-                                <h1 style = "margin-top:0">CHARACTER NAME</h1>
+                        <div class = "textColumn" id = "textCol">
+                                <h1 style = "margin-top:0; font-size: 28px;">TITLE</h1>
+                                <table>
+                                        <tr>
+                                                <td class = "category">Gender: </td>
+                                                <td class = "data">GENDER</td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Pronouns:</td>
+                                                <td class = "data">PRONOUNS</td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Orientation:</td>
+                                                <td class = "data">ORIENTATION</td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Age:</td>
+                                                <td class = "data">AGE</td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Eyes:</td>
+                                                <td class = "data">EYES</td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Height</td>
+                                                <td class = "data">HEIGHT</td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Abilities:</td>
+                                                <td class = "data">ABILITIES</td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Personality:</td>
+                                                <td class = "data">PERSONALITY</td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Story Role:</td>
+                                                <td class = "data">ROLE</td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Voice Actor:</td>
+                                                <td class = "data">
+                                                        <a href="../vas/VA.html">VA</a>
+                                                </td>
+                                        </tr>
+                                </table>
                         </div>
                 </div>
 
@@ -39,4 +109,8 @@
                 </div>
                 <br>
         </body>
+        <script>
+                imgTxtAlignment()
+                moveUp("characterPage")
+        </script>
 </html>
