--- a/WTAOW/credits.html
+++ b/WTAOW/credits.html
@@ -4,7 +4,7 @@
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>Credits</title>
-                <link rel="icon" type="image/x-icon" href="Assets/Icon.png">
+                <link rel="icon" type="image/x-icon" href="Assets/icon.png">
                 <link href="styles.css" rel="stylesheet" type="text/css" media="all">
                 <style>
 
@@ -15,8 +15,8 @@
 
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html"><p>Socials</p></a>
-                                <a href = "."><p>Home</p></a>
+                                <a href = "socials.html">Socials</a>
+                                <a href = ".">Home</a>
                                 <a href = "video-feed.html"><p>Videos</p></a>
                         </div>
                 </div>
