--- a/WTAOW/index.html
+++ b/WTAOW/index.html
@@ -4,23 +4,25 @@
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>WTAOW</title>
-                <link rel="icon" type="image/x-icon" href="assets/Icon.png">
+                <link rel="icon" type="image/x-icon" href="assets/icon.png">
                 <link href="styles.css" rel="stylesheet" type="text/css" media="all">
                 <link rel="javascript" href = "scripts.js" type="text/javascript">
                 <script src = "scripts.js"></script>
                 <style>
                         .posterSwap{
                                 background-color: #00FF00;
-                                z-index: 4;
+                                z-index: 6;
                                 position: absolute;
-                                top: 10px;
+                                top: 120px;
                                 left: 10px;
                         }
                         .posterSwap .tooltiptext{
+                                position: absolute;
                                 color: aliceblue;
                                 top:100%;
-                                left:250%;
+                                left:0%;
                                 bottom: auto;
+                                z-index: 7;
                         }
                 </style>
 
@@ -31,24 +33,28 @@
         <body onload = "checkEnabled('posterWTAOW', 'poster')">
                 <div class= "backing"></div>
                 <div class= "cover"></div>
-                <div class= "poster" id = "posterWTAOW" onclick = "begone('posterWTAOW')" onkeypress = "begone('posterWTAOW')">
-                                <img src = "assets/poster.png">
+                <div class= "poster" id = "posterWTAOW" onclick = "begone('posterWTAOW')" onfocus = "begone('posterWTAOW')" tabindex="1">
+                        <img src = "assets/poster.png" onfocus = "begone('posterWTAOW')" tabindex="1">
                 </div>
                 <button class= "posterSwap tooltip" id= "posterSwap" onclick = "swapEnabled('poster')">
                         P
                         <span class = "tooltiptext">Click to enable or disable the poster appearing</span>
                 </button>
+
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html"><p>Socials</p></a>
-                                <a href = "" class = "active"><p>Home</p></a>
-                                <a href = "characters/"><p>Characters</p></a>
+                                <a href = "socials.html">Socials</a>
+                                <a href = "" class = "active">Home</a>
+                                <a href = "characters/">Characters</a>
+                                <a href = "Fanart/">Fanart</a>
+                                <a href = "VAs/">VAs</a>
+                                <a href = "credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
                 <div class = "center">
                         <p style = "color: aliceblue;">
                                 Welcome to the official website for
-                                <span class = "tooltip"> WTAOW,<span class = "tooltiptext">Was There Any Other Way</span></span>
+                                <span class = "tooltip"> WTAOW<span class = "tooltiptext">Was There Any Other Way</span></span>,
                                 here you can find all the characters, videos, socials and much more!
                         </p>
                 </div>
