--- a/WTAOW/video-feed.html
+++ b/WTAOW/video-feed.html
@@ -4,20 +4,20 @@
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
                 <title>Credits</title>
-                <link rel="icon" type="image/x-icon" href="assets/Icon.png">
+                <link rel="icon" type="image/x-icon" href="assets/icon.png">
                 <link href="styles.css" rel="stylesheet" type="text/css" media="all">
                 <style>
 
                 </style>
         </head>
-
         <body class = "index_Back">
-
+                <div class= "backing"></div>
+                <div class= "cover"></div>
                 <div class = "top">
                         <div class = "links">
-                                <a href = "socials.html"><p>Socials</p></a>
-                                <a href = "."><p>Home</p></a>
-                                <a href = "characters/"><p>Characters</p></a>
+                                <a href = "socials.html">Socials</a>
+                                <a href = ".">Home</a>
+                                <a href = "characters/">Characters</a>
                         </div>
                 </div>
 
