--- a/WTAOW/C&C/aurora.html
+++ b/WTAOW/C&C/aurora.html
@@ -3,10 +3,10 @@
         <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Template</title>
+                <title>Aurora</title>
                 <link rel="icon" type="image/x-icon" href="../assets/icon.png">
                 <link href="../styles.css" rel="stylesheet" type="text/css" media="all">
-                <link href="characterStyles.css" rel="stylesheet" type="text/css" media="all">
+                <link href="crewStyles.css" rel="stylesheet" type="text/css" media="all">
                 <script src = "../scripts.js"></script>
                 <script src = "scripts.js"></script>
                 <style>
@@ -37,6 +37,7 @@
                                         font-weight: 500;
                                 }
                         }
+                        
                 </style>
         </head>
 
@@ -49,7 +50,7 @@
                                 <a tabindex="1" href = ".." >Home</a>
                                 <a tabindex="1" href = "../characters">Characters</a>
                                 <a tabindex="1" href = "../Fanart">Fanart</a>
-                                <a tabindex="1" href = "." class = "active">VAs</a>
+                                <a tabindex="1" href = "." class = "active">C&C</a>
                                 <a tabindex="1" href = "../credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
@@ -59,29 +60,30 @@
                                 <a class = "image"></a>
                         </div>
                         <div class = "textColumn" id = "textCol">
-                                <h1 style = "margin-top:0; font-size: 28px;">Aurora :)</h1>
+                                <h1 style = "margin-top:0; font-size: 28px;">Aurora</h1>
                                 <table>
                                         <tr>
-                                                <td class = "category">Gender:</td>
-                                                <td class = "data">Girlfux</td>
+                                                <td class = "category">Gender: </td>
+                                                <td class = "data">Girlflux</td>
                                         </tr>
                                         <tr>
-                                                <td class = "category">Pronouns:</td>
-                                                <td class = "data"> She/They</td>
+                                                <td class = "category">Pronouns: </td>
+                                                <td class = "data">She/They</td>
                                         </tr>
                                         <tr>
-                                                <td class = "category">Roles:</td>
+                                                <td class = "category">Roles: </td>
                                                 <td class = "data">
                                                         <a href = "../roles.html#coder">Coder</a>,
-                                                        <a href = "../roles.html#va">VA</a>
+                                                        <a href = "../roles.html#va">VA</a>,
+                                                        <a href = "../roles.html#puzzlemaker">Puzzlemaker</a>,
 
                                                 </td>
                                         </tr>
                                 </table>
-                                <h3>About me</h3>
+                                <h3>About Me</h3>
                                 <p>
-                                        Hiya, I'm Aurora, I'm the one of the voices of Xero and also the sole coder behind this entire website, I hope you like it.
-                                     <br>
+                                        Hiya, I'm Aurora, I'm the one of the voices of <a href='../characters/Xero.html'>Xero</a> and also the sole coder behind this entire website, I hope you like it.
+                                    <br>I've been coding for nearly 9 years now and I mainly do python, C# and HTML
 
                                 </p>
                         </div>
@@ -94,6 +96,6 @@
         <script>
                 imgTxtAlignment()
                 moveUp("crewPage")
-                SCRIPT
+                
         </script>
 </html>
