--- a/WTAOW/socials.html
+++ b/WTAOW/socials.html
@@ -6,7 +6,7 @@
                 <title>WTAOW</title>
                 <link rel="icon" type="image/x-icon" href="assets/icon.png">
                 <link href="styles.css" rel="stylesheet" type="text/css" media="all">
-                <link rel="javascript" href = "scripts.js" type="text/javascript">
+                <link rel="jaC&Ccript" href = "scripts.js" type="text/jaC&Ccript">
                 <script src = "scripts.js"></script>
                 <style>
                         .discord{
@@ -66,7 +66,7 @@
                                 <a tabindex="1" href = "." >Home</a>
                                 <a tabindex="1" href = "characters/">Characters</a>
                                 <a tabindex="1" href = "Fanart/">Fanart</a>
-                                <a tabindex="1" href = "VAs/">VAs</a>
+                                <a tabindex="1" href = "C&C/">C&C</a>
                                 <a tabindex="1" href = "credits.html" style="margin-right: 15%;">Credits</a>
                         </div>
                 </div>
