--- a/WTAOW/C&C/index.html
+++ b/WTAOW/C&C/index.html
@@ -56,7 +56,7 @@
                 <div class = "characterSelector">
                         <div class = 'tile fire' onclick = "link('fireboa.html')">
                                 <a class = 'image' id = "fire" href="fireboa.html" tabindex="0"></a>
-                                <a>FireBoa<span class = "mobile"><br></span></a>
+                                <a>Fireboa<span class = "mobile"><br></span></a>
                         </div>
                         <div class = 'tile bloom' onclick = "link('bloomaboo.html')">
                                 <a class = 'image' id = "bloom" href="bloomaboo.html" tabindex="0"></a>
