--- a/WTAOW/C&C/jadesgarden.html
+++ b/WTAOW/C&C/jadesgarden.html
@@ -11,7 +11,7 @@
                 <script src = "scripts.js"></script>
                 <style>
                         .image{
-                                background-image: image-set("assets/{name}.png");
+                                background-image: image-set("assets/jadesgarden.png");
                         }
                         .textColumn table{
                                 width: auto;
