--- a/WTAOW/C&C/zel.html
+++ b/WTAOW/C&C/zel.html
@@ -3,7 +3,9 @@
         <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Embry</title>
+                <meta charset="UTF-8">
+                <meta name="viewport" content="width=device-width, initial-scale=1.0">
+                <title>Zel</title>
                 <link rel="icon" type="image/x-icon" href="../assets/images/icon.png">
                 <link href="../styles.css" rel="stylesheet" type="text/css" media="all">
                 <link href="crewStyles.css" rel="stylesheet" type="text/css" media="all">
@@ -11,21 +13,21 @@
                 <script src = "scripts.js"></script>
                 <style>
                         :root{
-                                --top-bg-colour: #6e352c;
-                                --top-a-bg-colour: #94473b;
-                                --top-a-colour: #6e352c;
-                                --top-a-hover-bg-colour: #d15231;
-                                --top-a-hover-colour: #e4c599;
-                                --highlight: #e4c599;
-                                --text-colour: #3a3d55;
-                                --page-colour: #f69a45af;
-                                --image: image-set("assets/embry/icon.png");
-                                --background: image-set("assets/embry/background.jpg");
+                                --top-bg-colour: #1e453e;
+                                --top-a-bg-colour: #182c25;
+                                --top-a-colour: #455b55;
+                                --top-a-hover-bg-colour: #455b55;
+                                --top-a-hover-colour: #53b476;
+                                --highlight: #53b476;
+                                --text-colour: #306844;
+                                --page-colour: #182c25cf;
+                                --image: image-set("assets/zel/icon.png");
                         }
 
                         @media only screen and (max-width: 700px) {
 
                         }
+
                 </style>
         </head>
 
@@ -43,12 +45,12 @@
                         </div>
                 </div>
 
-                <div class = "crewPage local">
+                <div class = "crewPage">
                         <div class = "imageColumn" id = "imageCol">
                                 <a class = "image"></a>
                         </div>
                         <div class = "textColumn" id = "textCol">
-                                <h1 style = "margin:0;">Embry</h1>
+                                <h1 style = "margin:0;">Zel</h1>
                                 <table>
                                         <tr>
                                                 <td class = "category">Gender: </td>
@@ -56,19 +58,27 @@
                                         </tr>
                                         <tr>
                                                 <td class = "category">Pronouns: </td>
-                                                <td class = "data">They/Them</td>
+                                                <td class = "data">Any</td>
                                         </tr>
                                         <tr>
                                                 <td class = "category">Roles: </td>
                                                 <td class = "data">
-                                                        <a href = "../roles.html#singer">Singer</a>
+                                                        <a href = "../roles.html#va">VA</a>
+                                                </td>
+                                        </tr>
+                                        <tr>
+                                                <td class = "category">Socials: </td>
+                                                <td class = "data">
+                                                        <a href = "https://www.twitch.tv/zelteric">Twitch</a> &
+                                                        <a href = "https://www.youtube.com/@ZeltericVODS">Youtube</a> &
+                                                        <a href = "https://x.com/Zzelteric">Twitter/X</a>
 
                                                 </td>
                                         </tr>
                                 </table>
                                 <h3>About Me</h3>
                                 <p>
-                                        Hello peoples! I'm your local raccoon trash hermit! I haven't done much professional work (or any at all), but I've been singing for most of my life. I've been trying to write a book, and do art on the side outside of school and work. I don't have much of a life outside of the Internet, but one of my biggest dreams is to do work like this professionally, whether it be voice acting or just singing.
+                                        Hiya! I'm Zel and I am the voice of <a href="../characters/mouse.html">Mouse</a> in WTAOW! I'm really passionate a bout writing and storytelling. I am also a twitch streamer where i play mostly Minecraft. Ouside of online stuff, i spend most of my time reading or crocheting :]
                                 </p>
                         </div>
                 </div>
@@ -80,6 +90,6 @@
         <script>
                 imgTxtAlignment()
                 moveUp("crewPage")
-                
+                SCRIPT
         </script>
 </html>
