--- a/WTAOW/C&C/index.html
+++ b/WTAOW/C&C/index.html
@@ -13,7 +13,7 @@
                         .tile.kirachi .image{background-image: image-set("assets/kirachi/icon.png");}
                         .tile.aurora .image{background-image: image-set("assets/aurora/icon.png");}
                         .tile.mrSane .image{background-image: image-set("assets/mrSane/icon.png");}
-                        .tile.yuri .image{background-image: image-set("assets/yuri/icon.jpg");}
+                        .tile.vincent .image{background-image: image-set("assets/yuri/icon.jpg");}
                         .tile.ashe .image{background-image: image-set("assets/ashe/icon.png");}
                         .tile.snow .image{background-image: image-set("assets/snow/icon.png");}
                         .tile.tookie .image{background-image: image-set("assets/tookie/icon.jpg");}
@@ -25,7 +25,9 @@
                         .tile.shi-no-ogama .image{background-image: image-set("assets/shi-no-ogama/icon.png");}
                         .tile.death .image{background-image: image-set("assets/death/icon.png");}
                         .tile.onyx .image{background-image: image-set("assets/onyx/icon.jpg");}
-                        .tile.name .image{background-image: image-set("assets/name.png");}
+                        .tile.kitty .image{background-image: image-set("assets/kitty/icon.jpg");}
+                        .tile.zel .image{background-image: image-set("assets/zel/icon.png");}
+                        .tile.name .image{background-image: image-set("assets/name/icon.png");}
 
 
                         .tile.bloom .image{background-image: image-set("assets/bloomaboo/icon.png");}
@@ -90,9 +92,9 @@
                                 <a>Mr Sane<span class = "mobile"><br></span></a>
                         </div>
 
-                        <div class = 'tile yuri' onclick = "link('yuri.html')">
-                                <a class = 'image' id = "yuri" href="yuri.html" tabindex="0"></a>
-                                <a>Yuri<span class = "mobile"><br></span></a>
+                        <div class = 'tile vincent' onclick = "link('vincent.html')">
+                                <a class = 'image' id = "vincent" href="vincent.html" tabindex="0"></a>
+                                <a>Vincent<span class = "mobile"><br></span></a>
                         </div>
 
                         <div class = 'tile ashe' onclick = "link('ashe.html')">
@@ -147,6 +149,16 @@
                         <div class = 'tile onyx' onclick = "link('onyx.html')">
                                 <a class = 'image' id = "onyx" href="onyx.html" tabindex="0"></a>
                                 <a>Onyx<span class = "mobile"><br></span></a>
+                        </div>
+
+                        <div class = 'tile kitty' onclick = "link('kitty.html')">
+                                <a class = 'image' id = "kitty" href="kitty.html" tabindex="0"></a>
+                                <a>Kitty/Rose<span class = "mobile"><br></span></a>
+                        </div>
+
+                        <div class = 'tile zel' onclick = "link('zel.html')">
+                                <a class = 'image' id = "zel" href="zel.html" tabindex="0"></a>
+                                <a>Zel<span class = "mobile"><br></span></a>
                         </div>
                 </div>
 
