--- a/WTAOW/C&C/kitty.html
+++ b/WTAOW/C&C/kitty.html
@@ -3,7 +3,7 @@
         <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Yuri</title>
+                <title>Kitty/Rose</title>
                 <link rel="icon" type="image/x-icon" href="../assets/images/icon.png">
                 <link href="../styles.css" rel="stylesheet" type="text/css" media="all">
                 <link href="crewStyles.css" rel="stylesheet" type="text/css" media="all">
@@ -11,26 +11,22 @@
                 <script src = "scripts.js"></script>
                 <style>
                         :root{
-                                --top-bg-colour: #735851;
-                                --top-a-bg-colour: #bf4343;
-                                --top-a-colour: #0a0a0a15;
-                                --top-a-hover-bg-colour: #8c1b13;
-                                --top-a-hover-colour: #e7d7c0;
-                                --highlight: #ff5959;
-                                --text-colour: #e7d7c0;
-                                --page-colour: #a68a7fcf;
-                                --image: image-set("assets/yuri/icon.jpg");
-                                --background: image-set("assets/yuri/backgroundDesktop.png");
+                                --top-bg-colour: #feb69daf;
+                                --top-a-bg-colour: #c58ba6;
+                                --top-a-colour: #966256;
+                                --top-a-hover-bg-colour: #966256;
+                                --top-a-hover-colour: #f6c4c3;
+                                --highlight: #f6c4c3;
+                                --text-colour: #000000;
+                                --page-colour: #feb69daf;
+                                --image: image-set("assets/kitty/icon.jpg");
                         }
 
-                        .backing{
-                                background-repeat: no-repeat;
-                        }
                         @media only screen and (max-width: 700px) {
                                 :root{
-                                        --background: image-set("assets/yuri/backgroundMobile.png");
+                                        --page-colour: #fdd88aaf;
+                                        --highlight: #c58ba6;
                                 }
-
                         }
                 </style>
         </head>
@@ -54,29 +50,27 @@
                                 <a class = "image"></a>
                         </div>
                         <div class = "textColumn" id = "textCol">
-                                <h1 style = "margin:0">Yuri</h1>
+                                <h1 style = "margin:0;">Kitty/Rose</h1>
                                 <table>
                                         <tr>
                                                 <td class = "category">Gender: </td>
-                                                <td class = "data">???</td>
+                                                <td class = "data">Any/Female</td>
                                         </tr>
                                         <tr>
                                                 <td class = "category">Pronouns: </td>
-                                                <td class = "data">They/Them</td>
+                                                <td class = "data">She/They/He</td>
                                         </tr>
                                         <tr>
                                                 <td class = "category">Roles: </td>
                                                 <td class = "data">
-                                                        <a href = "../roles.html#artist">Artist</a>,
-                                                        <a href = "../roles.html#musician">Musician</a>
+                                                        <a href = "../roles.html#va">VA</a>
 
                                                 </td>
                                         </tr>
                                 </table>
                                 <h3>About Me</h3>
                                 <p>
-                                        Greetings… I am Yuri✨
-                                    <br>I am kind of an artist, and I like music!! I don't really have a lot of achievements but I do cover songs with some friends irl. Sometimes I write a bit for fun, and sometimes I try new things. I like to listen to true crime podcasts and music. Nice to meet you, stranger on the internet… (^_^)
+                                        Hello, I'm Kitty, otherwise known as Rose! I'm the voice actor for <a href='../characters/copycat.html'>Copycat</a>! I have always wanted to voice act and I've had many small chances to voice act for small discord shows! Sadly none have been posted as of now! I'm so glad I was chosen to help voice act in this project since it seemed really interesting to me! I love voice acting, it's a small hobby of mine!
                                 </p>
                         </div>
                 </div>
@@ -88,6 +82,5 @@
         <script>
                 imgTxtAlignment()
                 moveUp("crewPage")
-                
         </script>
 </html>
