--- a/WTAOW/C&C/vincent.html
+++ b/WTAOW/C&C/vincent.html
@@ -3,7 +3,7 @@
         <head>
                 <meta charset="UTF-8">
                 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                <title>Embry</title>
+                <title>Vincent</title>
                 <link rel="icon" type="image/x-icon" href="../assets/images/icon.png">
                 <link href="../styles.css" rel="stylesheet" type="text/css" media="all">
                 <link href="crewStyles.css" rel="stylesheet" type="text/css" media="all">
@@ -11,19 +11,25 @@
                 <script src = "scripts.js"></script>
                 <style>
                         :root{
-                                --top-bg-colour: #6e352c;
-                                --top-a-bg-colour: #94473b;
-                                --top-a-colour: #6e352c;
-                                --top-a-hover-bg-colour: #d15231;
-                                --top-a-hover-colour: #e4c599;
-                                --highlight: #e4c599;
-                                --text-colour: #3a3d55;
-                                --page-colour: #f69a45af;
-                                --image: image-set("assets/embry/icon.png");
-                                --background: image-set("assets/embry/background.jpg");
+                                --top-bg-colour: #735851;
+                                --top-a-bg-colour: #bf4343;
+                                --top-a-colour: #0a0a0a15;
+                                --top-a-hover-bg-colour: #8c1b13;
+                                --top-a-hover-colour: #e7d7c0;
+                                --highlight: #ff5959;
+                                --text-colour: #e7d7c0;
+                                --page-colour: #a68a7fcf;
+                                --image: image-set("assets/yuri/icon.jpg");
+                                --background: image-set("assets/yuri/backgroundDesktop.png");
                         }
 
+                        .backing{
+                                background-repeat: no-repeat;
+                        }
                         @media only screen and (max-width: 700px) {
+                                :root{
+                                        --background: image-set("assets/yuri/backgroundMobile.png");
+                                }
 
                         }
                 </style>
@@ -48,27 +54,29 @@
                                 <a class = "image"></a>
                         </div>
                         <div class = "textColumn" id = "textCol">
-                                <h1 style = "margin:0;">Embry</h1>
+                                <h1 style = "margin:0">Vincent</h1>
                                 <table>
                                         <tr>
                                                 <td class = "category">Gender: </td>
-                                                <td class = "data">Non-Binary</td>
+                                                <td class = "data">???</td>
                                         </tr>
                                         <tr>
                                                 <td class = "category">Pronouns: </td>
-                                                <td class = "data">They/Them</td>
+                                                <td class = "data">He/They</td>
                                         </tr>
                                         <tr>
                                                 <td class = "category">Roles: </td>
                                                 <td class = "data">
-                                                        <a href = "../roles.html#singer">Singer</a>
+                                                        <a href = "../roles.html#artist">Artist</a>,
+                                                        <a href = "../roles.html#musician">Musician</a>
 
                                                 </td>
                                         </tr>
                                 </table>
                                 <h3>About Me</h3>
                                 <p>
-                                        Hello peoples! I'm your local raccoon trash hermit! I haven't done much professional work (or any at all), but I've been singing for most of my life. I've been trying to write a book, and do art on the side outside of school and work. I don't have much of a life outside of the Internet, but one of my biggest dreams is to do work like this professionally, whether it be voice acting or just singing.
+                                        Greetings… I am Vincent✨
+                                    <br>I am kind of an artist, and I like music!! I don't really have a lot of achievements but I do cover songs with some friends irl. Sometimes I write a bit for fun, and sometimes I try new things. I like to listen to true crime podcasts and music. Nice to meet you, stranger on the internet… (^_^)
                                 </p>
                         </div>
                 </div>
